--- a/todo
+++ b/todo
@@ -1,1 +1,46 @@
-Deal with blank lines
+Preform Ops to evaluate truth values
+    -Done test further
+    -How to deal with ~x, set x to false or leave for manipulation rules
+
+Add Manipulation rules
+    -in place replacements?
+
+Add Theorem importing
+    -Theorems should act as rules as well
+
+Add FOL
+
+
+FUTURE WARNINGS:
+    -Object Entabglement
+
+Peano 
+    - Need to define equality 
+    - Formalize s ?
+        - Unification ?
+
+
+Prove commutatitive addition
+x + s(y) = s(x + y)
+x + 0 = x
+-----
+0 + x = x 
+bc: 0 + 0 = 0 :)
+IH: 0 + x = x show 0 + s(x) = s(x)
+0 + s(x) = s(0 + x) = s(x)
+QED
+----------------------
+s(x) + y = s(x + y)
+s(x) + 0 = s(x) = s(x + 0) :)
+IH: s(x) + y = s(x + y)  Show s(x) + s(y) = s(x + s(y))
+s(x) + s(y) = s(s(x) + y) = s( s(x+y) ) = s(x + s(y))
+QED
+----------------------
+x+y = y+x
+BC x + 0 = x ; 0 + x = x ; x+0 = 0+x
+IH x + y = y + x , show x + s(y) = s(y) + x
+x + s(y) = s(x + y) = s(y + x) = s(y) + s(x)
+QED
+----------------------
+
+
